# dot-for-dbt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IDEAS.md  LICENSE  README.md  TODO.md  pyproject.toml
.clinerules/: development_guide.md
adr/: 0001-commit-isolated-schemas.md  0001-isolated-builds.md  0002-environment-config.md  0003-variable-config.md
development_plans/: 0001-commit-isolated-schemas.md  0001-isolated-builds.md  0002-dot-gitignore.md  0003-variable-config-final-validation.md  0004-user-prompts.md  0005-deferred-builds.md  README.md
example_dbt_project/: dbt_project.yml  dot_environments.yml  dot_vars.yml  profiles.yml  vars.yml
src/dot/: __init__.py  __main__.py  cli.py  cli_prompts.py  config.py  dot.py  git.py  logging.py  profiles.py
tests/: test_cli_defer.py  test_cli_deps.py  test_cli_gitignore.py  test_cli_vscode_settings.py  test_config.py  test_git.py  test_profiles.py
