[project]
name = "dot"
version = "0.1.1"
description = "dot - the Data Orchestration Tool (for dbt)"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Database",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "pyyaml>=6.0.2",
    "pygit2>=1.14.1",
]

[project.scripts]
dot = "dot.cli:app"
